<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quiz_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context="com.pratiksymz.android.quizapp.QuizResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/final_result_header"
            style="@style/finalResultHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finalResult" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/totalScore"
                    style="@style/finalScoreStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/resultSummary"
                    style="@style/finalResultSummaryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </ScrollView>

        <View
            style="@style/horizontalViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_1"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/correct_answer_header"
            style="@style/correctAnswerHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correctAnswer" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/correctAnswersStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1" />

                <TextView
                    style="@style/correctAnswersStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2" />

                <TextView
                    style="@style/correctAnswersStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer3" />

                <TextView
                    style="@style/correctAnswersStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer4" />

                <TextView
                    style="@style/correctAnswersStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer5" />

                <TextView
                    style="@style/correctAnswersStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer6" />

                <TextView
                    style="@style/correctAnswersStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer7" />

                <TextView
                    style="@style/correctAnswersStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer8" />

                <TextView
                    style="@style/correctAnswersStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer9" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>

